completed phase 4 of the integrations app
